spices/ecs/tests/errors/xworld-unused-world.tur
;; N-W-V0 negative regression: every world declared in a `defxsystem`
;; binding vector must appear in at least one `:reads-from` /
;; `:writes-to` clause. Here the three-world system declares `pred` but
;; never reads or writes it. The N-world clause-parser detects the
;; dropped world and emits the bare symbol
;; `defxsystem--world-pred-declared-but-never-read-or-written`, which is
;; unbound -- so the declaration fails to compile (TUR-E0003). This
;; keeps unintentional world drops honest (the plan's "warn if a world
;; has no clauses", realised as a hard error since the macro layer has
;; no compile-time warning channel).

(defmodule xworld_unused_world_test
  (export)

(import ecs/sized-storage :refer [SizedDense])
(import ecs/sized-world   :refer [sized-defworld-mono])
(import ecs/xworld        :refer [sized-defcomponent-accessors-xmono])
(import ecs/xcap          :refer [XWriteCap XReadCap
                                  make-write-cap make-read-cap use-cap!])
(import ecs/xsystem       :refer [XSystemN make-xsystem-n defxsystem
                                  xsm-alloc xsm-set! xsm-get xsm-free])

(defopaque Pos       :int)
(defopaque PredPos   :int)
(defopaque RenderPos :int)

(sized-defworld-mono AuthWorld   (Static 8) [Pos])
(sized-defcomponent-accessors-xmono AuthWorld Pos)
(sized-defworld-mono PredWorld   (Static 8) [PredPos])
(sized-defcomponent-accessors-xmono PredWorld PredPos)
(sized-defworld-mono RenderWorld (Static 8) [RenderPos])
(sized-defcomponent-accessors-xmono RenderWorld RenderPos)

(def Pos-cid       0)
(def PredPos-cid   0)
(def RenderPos-cid 0)

(defn load-AuthWorld   [wp : int] : AuthWorld   ```c
  return *(AuthWorld *)(intptr_t)wp; ```)
(defn load-PredWorld   [wp : int] : PredWorld   ```c
  return *(PredWorld *)(intptr_t)wp; ```)
(defn load-RenderWorld [wp : int] : RenderWorld ```c
  return *(RenderWorld *)(intptr_t)wp; ```)

;; `pred` is declared in the binding vector but never appears in a
;; clause -- the validation rejects this.
(defxsystem dropped-world
  [auth AuthWorld  pred PredWorld  ren RenderWorld]
  :reads-from auth [Pos]
  :writes-to  ren  [RenderPos]
  (set-RenderPos! ren-RenderPos-write-cap ren 0
    (:: (:: (get-Pos auth-Pos-read-cap auth 0) :int) :RenderPos)))

(defn main [] : int 0)

) ;; end defmodule xworld_unused_world_test
